--- a/ss11_webservice/ajax/index.html
+++ b/ss11_webservice/ajax/index.html
@@ -28,15 +28,15 @@
     </tr>
     </thead>
     <tbody id = "tbody">
-    <tr>
-        <td colspan="4">
-            <div class="d-flex justify-content-center">
-                <div class="spinner-border" role="status">
-                    <span class="visually-hidden">loading...</span>
-                </div>
-            </div>
-        </td>
-    </tr>
+<!--    <tr>-->
+<!--        <td colspan="4">-->
+<!--            <div class="d-flex justify-content-center">-->
+<!--                <div class="spinner-border" role="status">-->
+<!--                    <span class="visually-hidden">loading...</span>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </td>-->
+<!--    </tr>-->
     </tbody>
 </table>
 
