--- a/ss11_webservice/ajax/index.html
+++ b/ss11_webservice/ajax/index.html
@@ -16,6 +16,22 @@
         <button id="btn-save" type="button" onclick="add()">Save</button>
     </form>
 </div>
+<div class="modal" tabindex="-1">
+    <div class="modal-dialog" id="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">ADD PLAYER</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>ADD PLAYER SUCCESFULLY!!</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-primary">OK</button>
+            </div>
+        </div>
+    </div>
+</div>
 <h2 style="margin-left: 100px">PLAYERS LIST</h2>
 <table class="table table-striped">
     <thead>
