--- a/ss11_webservice/ajax/index.html
+++ b/ss11_webservice/ajax/index.html
@@ -16,18 +16,21 @@
         <button id="btn-save" type="button" onclick="add()">Save</button>
     </form>
 </div>
-<div class="modal" tabindex="-1">
-    <div class="modal-dialog" id="modal">
+<div class="modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">ADD PLAYER</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             <div class="modal-body">
-                <p>ADD PLAYER SUCCESFULLY!!</p>
+                <p>Modal body text goes here.</p>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary">OK</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
